refactoring project and fixing code